Add backend database config

--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:638571999221:ios:2559dc44105054745cfabc",
-  "FIREBASE_PROJECT_ID": "sia-app-e40f2",
-  "GCM_SENDER_ID": "638571999221"
+  "GOOGLE_APP_ID": "1:706063281960:ios:727e7f0a919f11a85aea1d",
+  "FIREBASE_PROJECT_ID": "sia-app-99c1c",
+  "GCM_SENDER_ID": "706063281960"
 }
