--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   custom_navigation_bar: 
+  firebase_core: ^2.14.0
+  firebase_auth:
+  syncfusion_flutter_datepicker: ^21.2.10 
+  cloud_firestore: ^4.8.1
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
